# raztint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  ruff.toml  ty.toml
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: README.md  bench_detection.py  bench_icons.py  bench_import.py  bench_intents.py  bench_rendering.py  bench_security.py
docs/: api-reference.md  configuration.md  development.md  getting-started.md  icons-and-detection.md  index.md  intents.md  redaction.md  tutorial.md
examples/: basic_usage.py  format_text_demo.py  real_world_cli.py
src/raztint/: __init__.py  __init__.pyi  colors.py  core.py  env_detect.py  font_detect.py  raztint.py  styles.py
src/raztint/core/: __init__.py  ansi.py  builder.py  extended.py  instance.py  instance.pyi  protocols.py
src/raztint/data/: __init__.py  colors.py  intents.py  styles.py  types.py
src/raztint/detect/: __init__.py  debug.py  env.py  fonts.py
src/raztint/formatting/: __init__.py  codes.py  paint.py
src/raztint/icons/: __init__.py  registry.py  resolve.py
src/raztint/security/: __init__.py  masking.py
tests/: conftest.py  test_core.py  test_env_detect.py  test_font_detect.py
tests/unit/: test_api.py  test_package.py  test_typing.py
tests/unit/core/: test_ansi.py  test_extended_colors.py  test_instance.py
tests/unit/data/: test_intents.py  test_palette.py  test_types.py
tests/unit/detect/: test_debug.py  test_env.py  test_fonts.py
tests/unit/formatting/: test_codes.py  test_paint.py  test_paint_fast.py
tests/unit/icons/: test_registry.py  test_resolve.py
tests/unit/security/: test_masking.py
