[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[project]
name = "raztint"
version = "0.8.2"
description = "A zero-dependency Python library for ANSI coloring and smart CLI icons with automatic environment detection"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }

maintainers = [
    { name = "Raz", email = "real.raz.dev@gmail.com" },
]

keywords = [
    "terminal",
    "color",
    "colour",
    "console",
    "cli",
    "ansi",
    "terminal-colors",
    "nerd-fonts",
    "icons",
    "text-coloring",
    "cross-platform",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/razbuild/raztint"
Documentation = "https://github.com/razbuild/raztint/tree/master/docs"
Repository = "https://github.com/razbuild/raztint"
Issues = "https://github.com/razbuild/raztint/issues"
Changelog = "https://github.com/razbuild/raztint/releases"

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "ruff",
    "ty",
]

[tool.uv.build-backend]
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src"]

omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
